Add profile module